<resources>
    <string name="app_name">KataFilm</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="trending_now">Trending Now</string>
    <string name="title">This is Dump Title</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Plot Summary</string>
    <string name="year_release">year release</string>
    <string name="hot_tv_series">Trending TV Series</string>


    <!-- Non Translatable -->
    <string name="logo" translatable="false">logo</string>
    <string name="category" translatable="false">CATEGORY</string>
    <string name="movie_title" translatable="false">Movie title</string>
    <string name="release_date" translatable="false">2008</string>
    <string name="language" translatable="false">EN</string>
    <string name="language_setting">Change Language</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="poster_image" translatable="false">poster_image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote_average">Vote Average</string>
</resources>