<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/content_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/movie_title"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/language_item_template"
                        android:padding="2dp"
                        android:text="@string/language"
                        android:textColor="@color/grey_light" />
                </LinearLayout>

                <TextView
                    android:id="@+id/year_release_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/release_date"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            app:cardCornerRadius="5dp">

                            <ImageView
                                android:id="@+id/image_poster"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/grey_light"
                                android:contentDescription="@string/poster_image"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vote_average"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <com.ramijemli.percentagechartview.PercentageChartView
                                android:id="@+id/vote_average"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:layout_margin="10dp"
                                app:pcv_animDuration="2000"
                                app:pcv_textSize="20sp"
                                app:pcv_mode="ring"
                                app:pcv_progress="10"
                                app:pcv_progressBarThickness="10dp"
                                app:pcv_startAngle="270" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Popularity"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/popularity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="1.234.567"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/overview"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="Genre"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        app:flexWrap="wrap" />


                </LinearLayout>

            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/content_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/shimmer_detail_activity_content" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>