...
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popular"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_as_progressbar"
            android:layout_width="match_parent"
...
                <include layout="@layout/shimmer_item_placeholder" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/movie_item_view" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
